--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container section">
         <div id="logo">
-            <img src="/logo.png" alt="logo" width="150px" height="150px">
+            <img src="logo.png" alt="logo" width="150px" height="150px">
         </div>
         <h6 id="cap">@DragonSB</h6>
     
