--- a/index.html
+++ b/index.html
@@ -23,30 +23,45 @@
             <a href="https://dragonsb.finance/" class="btn btn-success btn-lg btn-block">Website</a>
         </div>
         <div class="contact-section-link">
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://www.facebook.com/Dragon-SB-109444668205356">
                 <ion-icon class="contact-icon facebook" name="logo-facebook"></ion-icon>
             </a>
-            <a class="btn contact-details" href="">
-                <ion-icon class="contact-icon instagram" name="logo-instagram"></ion-icon>
-            </a>
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://twitter.com/DragonSBFinance">
                 <ion-icon class="contact-icon twitter" name="logo-twitter"></ion-icon>
-            <a class="btn contact-details" href="">
-                <i class="fa-brands fa-telegram telegram"></i>
             </a>
-            <a class="btn contact-details" href="">
+            <div class="dropdown">
+                <a class="btn contact-details dropbtn" href="#">
+                    <i class="fa-brands fa-telegram telegram"></i>
+            </a>
+            <div class="dropdown-content">
+                <a href="https://t.me/dragonsb_offical">SB Global</a>
+                <a href="https://t.me/DragonSBVietNam">SB Việt Nam</a>
+                <a href="https://t.me/DragonSBChina">SB China</a>
+                <a href="https://t.me/DragonSBIndonesia">SB Indonesia</a>
+                <a href="https://t.me/DragonSBKorea">SB Korea</a>
+                <a href="https://t.me/DragonSBIndia">SB India</a>
+                <a href="https://t.me/DragonSBPhilippines">SB Philippin</a>
+                <a href="https://t.me/DragonSBBrazil">SB Brazil</a>
+                <a href="https://t.me/DragonSBArab">SB Arab</a>
+                <a href="https://t.me/DragonSBThailand">SB Thailand</a>
+                <a href="https://t.me/DragonSBJapan">SB Japan</a>
+                
+            </div>
+            </div>
+
+            <a class="btn contact-details" href="https://www.linkedin.com/company/DragonSB">
                 <ion-icon class="contact-icon linkedin" name="logo-linkedin"></ion-icon>
             </a>
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://youtu.be/qt4g5iqSluA">
                 <ion-icon class="contact-icon youtube" name="logo-youtube"></ion-icon>
             </a>
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://www.reddit.com/user/dragonsbfinance">
                 <i class="fa-brands fa-reddit-alien reddit"></i>
             </a>
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://dragonsb.medium.com/">
                 <ion-icon class="contact-icon medium" name="logo-medium"></ion-icon>
             </a>
-            <a class="btn contact-details" href="">
+            <a class="btn contact-details" href="https://discord.gg/XB3bBKVUS2">
                 <ion-icon class="contact-icon discord" name="logo-discord"></ion-icon>
             </a>
         </div>
